fix: srollbars only visible when required on chrome browsers

--- a/static/asteroid.css
+++ b/static/asteroid.css
@@ -136,7 +136,7 @@ body .now-playing{
     margin: 20px 0;
     font-size: 1.5em;
     color: #4488ff;
-    overflow: scroll;
+    overflow: auto;
 }
 
 body .back{
@@ -175,7 +175,7 @@ body .player-section{
 }
 
 body .player-section .live-stream{
-    overflow: scroll;
+    overflow: auto;
 }
 
 
